--- a/frontend/src/components/comData/comdata.css
+++ b/frontend/src/components/comData/comdata.css
@@ -1,68 +1,72 @@
 .comSideBar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    min-height: 200px;
-    background-color: white;
-    border-radius: 3px;
-  }
-  
-  .aboutHeader {
-    background-color: rgb(230, 230, 230);
-    width: 100%;
-    height: 45px;
-    border-radius: 1px;
-    display: flex;
-    align-items: center;
-  }
-  .aboutHeader > p {
-    margin: 0px 15px;
-    font-size: 15px;
-    font-weight: 550;
-  }
-  .aboutData {
-    height: 100%;
-    width: 90%;
-    margin-top: 15px;
-  }
-  .aboutData > span {
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: lightgray;
-  }
-  .aboutData p {
-    margin: 0px;
-  }
-  
-  .aboutData > p{
-      margin:10px 0px;
-  }
-  p.fn{
-      font-size:14px;
-      margin:5px 0px;
-  }
-  .mc{
-      margin:13px 0px;
-  }
-  .bd{
-      margin:13px 0px;
-  }
-  .bd > p{
-      margin:10px 0px;
-  }
-  .crd{
-      display:flex;
-      flex-direction:column;
-      margin:5px 0px;
-  }
-  .crd > button{
-      padding:8px 15px;
-      border-radius:25px;
-      background-color:rgb(28, 138, 228);
-      border:none;
-      color:white;
-      font-size:16px;
-      margin:5px 0px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: 200px;
+  background-color: white;
+  border-radius: 3px;
+}
+
+.aboutHeader {
+  background-color: rgb(230, 230, 230);
+  width: 100%;
+  height: 45px;
+  border-radius: 1px;
+  display: flex;
+  align-items: center;
+}
+.aboutHeader > p {
+  margin: 0px 15px;
+  font-size: 15px;
+  font-weight: 550;
+}
+.aboutData {
+  height: 100%;
+  width: 90%;
+  margin-top: 15px;
+}
+.aboutData > span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: lightgray;
+}
+.aboutData p {
+  margin: 0px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 300px;
+}
+
+.aboutData > p {
+  margin: 10px 0px;
+}
+p.fn {
+  font-size: 14px;
+  margin: 5px 0px;
+}
+.mc {
+  margin: 13px 0px;
+}
+.bd {
+  margin: 13px 0px;
+}
+.bd > p {
+  margin: 10px 0px;
+}
+.crd {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 0px;
+}
+.crd > button {
+  padding: 8px 15px;
+  border-radius: 25px;
+  background-color: rgb(28, 138, 228);
+  border: none;
+  color: white;
+  font-size: 16px;
+  margin: 5px 0px;
+}
